# sb-dl

./: .env  .gitignore  Cargo.toml  Makefile  README.md
ansible/: ansible.cfg  deploy.yml
ansible/inventories/: hosts.yml
ansible/inventories/group_vars/: all.yml
ansible/templates/: backfiller.service.j2  bigtable_downloader.service.j2  gap_fill.service.j2  gap_fill.sh.j2  geyser_stream.service.j2  geyser_stream_v2.service.j2  squads_indexer.service.j2  transfer_flow_api.service.j2
crates/db/: Cargo.toml  diesel.toml
crates/db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
crates/db/migrations/2024-07-01-155413_blocks/: up.sql
crates/db/migrations/2024-07-12-165722_idls/: down.sql  up.sql
crates/db/migrations/2024-07-12-165722_programs/: down.sql  up.sql
crates/db/migrations/2024-07-13-060955_idls/: up.sql
crates/db/migrations/2024-07-31-053714_alter_blocks_add_slot/: down.sql  up.sql
crates/db/migrations/2024-08-06-204856_token_mints/: up.sql
crates/db/migrations/2024-09-09-153928_copy_blocks/: down.sql  up.sql
crates/db/migrations/2024-09-14-103552_block_change_notification/: down.sql  up.sql
crates/db/migrations/2024-11-11-234849_squads/: down.sql  up.sql
crates/db/migrations/2024-11-26-214744_alter_squads_voting_members_count/: down.sql  up.sql
crates/db/migrations/2024-12-16-034310_alter_blocks_add_number_index/: down.sql  up.sql
crates/db/src/: blocks_stream.rs  client.rs  lib.rs  migrations.rs  models.rs  schema.rs  test_utils.rs  tests.rs
crates/g_dl/: Cargo.toml
crates/g_dl/src/: lib.rs
crates/sb_dl/: Cargo.toml
crates/sb_dl/src/: backfill.rs  bigtable.rs  config.rs  config_commands.rs  download_command.rs  geyser.rs  idl.rs  lib.rs  logger.rs  main.rs  parsable_instructions.rs  programs.rs  types.rs  utils.rs
crates/sb_dl/src/cli/: mod.rs
crates/sb_dl/src/commands/: config.rs  db.rs  download.rs  geyser.rs  idl_indexer.rs  mod.rs  program_indexer.rs  transfer_api.rs  transfer_graph.rs  utils.rs
crates/sb_dl/src/commands/services/: backfill.rs  bigtable.rs  downloaders.rs  idl_indexer.rs  metadata_indexer.rs  mint_indexer.rs  mod.rs  program_indexer.rs  repair_gaps.rs  squads_indexer.rs  transfer_api.rs  transfer_parser.rs
crates/sb_dl/src/programs/: mod.rs
crates/sb_dl/src/programs/squads/: mod.rs  v3.rs  v4.rs
crates/sb_dl/src/services/: backfill.rs  bigtable.rs  geyser.rs  idl_indexer.rs  metadata_indexer.rs  mint_indexer.rs  mod.rs  program_indexer.rs  squads_indexer.rs  transfer_flow_api.rs  transfer_parser.rs
crates/sb_dl/src/solana_bigtable/: mod.rs
crates/sb_dl/src/transfer_flow/: api.rs  mod.rs  transfer.rs  transfer_graph.rs  types.rs
crates/storage-bigtable/: Cargo.toml
crates/storage-bigtable/build-proto/: Cargo.toml
crates/storage-bigtable/src/: access_token.rs  bigtable.rs  lib.rs
scripts/: deploy.sh  failed_blocks_import.sh  import_idls.sh  program_index.sh
testdata/: block_275131467.json
testenv/: docker-compose.yml
