[package]
name = "sb-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sb_dl"
path = "src/main.rs"
[dependencies.anchor-lang]
version = "0.30"
[dependencies.solana-client]
version = "1.18"
[dependencies.solana-sdk]
version = "1.18"
[dependencies.solana-account-decoder]
version = "1.18"
[dependencies.solana-program]
version = "1.18"
[dependencies.solana-transaction-status]
version = "1.18"
[dependencies.anyhow]
version = "1"
[dependencies.log] 
version = "0.4"
[dependencies.diesel]
version = "2"
default-features = true
features = ["serde_json", "chrono", "uuid", "postgres", "r2d2"]
[dependencies.deadpool-diesel]
version = "0.4.1"
features = ["postgres", "serde"]
[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.serde_yaml]
version = "0.9"
[dependencies.clap]
version = "4"
[dependencies.bigtable_rs]
version = "0.2"
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json", "parking_lot", "tracing-log"]
[dependencies.tracing]
version = "0.1.40"
features = ["log", "attributes"]
[dependencies.serde_json]
version = "1"
[dependencies.solana-storage-proto]
version = "1.18"
[dependencies.regex]
version = "1"
[dependencies.yellowstone-grpc-proto]
git = "https://github.com/rpcpool/yellowstone-grpc"
rev = "87e1755b0d7a4e8101cb5feb6f30063aa91f343f"
[dependencies.yellowstone-grpc-client]
git = "https://github.com/rpcpool/yellowstone-grpc"
rev = "87e1755b0d7a4e8101cb5feb6f30063aa91f343f"
[dependencies.futures]
version = "0.3"
[dependencies.bincode]
version = "1"
[dependencies.borsh]
version = "0.10"
[dependencies.flate2]
version = "1"
[dependencies.anchor-lang-idl]
version = "0.1.1"
features = ["convert"]
[dependencies.lazy_static]
version = "1"
[dependencies.petgraph]
version = "0.6"
[dependencies.db]
path = "../db"
[dependencies.solana-storage-bigtable]
path = "../storage-bigtable"