[package]
name = "solana-storage-bigtable"
description = "Solana Storage BigTable"
documentation = "https://docs.rs/solana-storage-bigtable"
edition = "2021"
[dependencies]
backoff = {version = "0.4.0", features = ["tokio"]}
bincode = "1.3.3"
bytes = "1.8"
bzip2  = "0.4.4"
enum-iterator = "1.5.0"
flate2 = "1.0.31"
futures = "0.3.31"
goauth = "0.13.1"
http = "0.2.12"
hyper = "0.14.31"
hyper-proxy = "0.9.1"
log = "0.4"
# openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
# declare it here as well to activate the "vendored" feature that builds OpenSSL
openssl = "0.10"
prost = "0.11.9"
prost-types = "0.11.9"
serde = "1.0.213"
serde_derive = "1.0.213"
smpl_jwt = "0.7.1"
solana-metrics = "2.1.4"
solana-sdk = "2.1.4"
solana-storage-proto = "2.1.4"
solana-transaction-status = "2.1.4"
thiserror = "1.0.65"
tokio = "1"
tonic = {version = "0.9.2", features  = ["tls", "transport"]}
zstd = "0.13.2"

[lib]
crate-type = ["lib"]
name = "solana_storage_bigtable"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
