[package]
description = "Blockchain, Rebuilt for Scale"
name = "proto"
edition = "2021"

[dependencies]
tonic-build = "0.9.2"

# windows users should install the protobuf compiler manually and set the PROTOC
# envar to point to the installed binary
[target."cfg(not(windows))".dependencies]
protobuf-src = "1.1.0"
